# InfraLens

./: .gitignore  DESKTOP_BUILD.md  README.md  package.json
.github/workflows/: build-release.yml
backend/: .env.example  .gitignore  config_store.py  infralens-backend.spec  main.py  manager.py  probe_config.json  proxmox_engine.py  requirements.txt  security_check.py  service_probe.py
data/: mock_infrastructure.json
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  AppShell.jsx  Onboarding.jsx  Settings.jsx  api.js  index.css
frontend/src/components/: Logo.jsx  ServiceNode.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
