[package]
name = "infralens"
version = "0.1.0"
description = "Real-time topology, monitoring and LLM diagnostics for Proxmox homelabs"
authors = ["InfraLens"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# this feature is used for production builds where `devUrl` is disabled
custom-protocol = ["tauri/custom-protocol"]
